--- a/nuarte/templates/nuarte/index.html
+++ b/nuarte/templates/nuarte/index.html
@@ -8,9 +8,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}sim, claramente{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'nuarte/nuarte_style.css' %}">
 </head>
 <body>
     {% block content %}
+        <div class="global-navbar">
+            <ul class="nav justify-content-end">
+                <li>
+                    <div class="index-title">
+                        <h1>nuarte, lol</h1>
+                    </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="eventos.html">Eventos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="grupos.html">Grupos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="historia.html">História</a>
+                </li>
+                <li>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Digite aqui" aria-label="Search"/>
+                        <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+                    </form>
+                </li>
+            </ul>
+        </div>
         <p>insert text</p>
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
